# MyNDKSamples

./: README.md
NativeActivity/: README.md
NativeActivity/app/: build.gradle
NativeActivity/app/src/androidTest/java/com/example/czd/native_activity/: ExampleInstrumentedTest.java
NativeActivity/app/src/androidTest/java/com/example/czd/nativeactivity/: ExampleInstrumentedTest.java
NativeActivity/app/src/main/: AndroidManifest.xml
NativeActivity/app/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp
NativeActivity/app/src/main/java/com/example/czd/native_activity/: MainActivity.java
NativeActivity/app/src/main/res/layout/: activity_main.xml
NativeActivity/app/src/main/res/values/: strings.xml
NativeActivity/app/src/test/java/com/example/czd/native_activity/: ExampleUnitTest.java
NativeActivity/app/src/test/java/com/example/czd/nativeactivity/: ExampleUnitTest.java
NativeActivity/gradle/wrapper/: gradle-wrapper.properties
OpenGLES/app/: build.gradle
OpenGLES/app/src/androidTest/java/com/example/czd/opengles/: ExampleInstrumentedTest.java
OpenGLES/app/src/main/: AndroidManifest.xml
OpenGLES/app/src/main/java/com/example/czd/opengles/: MyGLRenderer.java  MyGLSurfaceView.java  OpenGLES20Activity.java  Triangle.java
OpenGLES/app/src/test/java/com/example/czd/opengles/: ExampleUnitTest.java
OpenGLES/gradle/wrapper/: gradle-wrapper.properties
hello-gl2/app/: build.gradle
hello-gl2/app/src/androidTest/java/com/example/czd/hello_gl2/: ExampleInstrumentedTest.java
hello-gl2/app/src/main/: AndroidManifest.xml
hello-gl2/app/src/main/cpp/: CMakeLists.txt  gl_code.cpp
hello-gl2/app/src/main/java/com/example/czd/hello_gl2/: GL2JNIActivity.java  GL2JNILib.java  GL2JNIView.java
hello-gl2/app/src/main/res/values/: strings.xml
hello-gl2/app/src/test/java/com/example/czd/hello_gl2/: ExampleUnitTest.java
hello-gl2/gradle/wrapper/: gradle-wrapper.properties
hello-libs/: build.gradle  settings.gradle
hello-libs/app/: build.gradle
hello-libs/app/src/androidTest/java/com/example/czd/hello_libs/: ExampleInstrumentedTest.java
hello-libs/app/src/main/: AndroidManifest.xml
hello-libs/app/src/main/cpp/: CMakeLists.txt  hello-libs.cpp  native-lib.cpp
hello-libs/app/src/main/java/com/example/czd/hello_libs/: MainActivity.java
hello-libs/app/src/main/java/com/example/czd/hellolibs/: MainActivity.java
hello-libs/app/src/main/res/layout/: activity_main.xml
hello-libs/app/src/test/java/com/example/czd/hello_libs/: ExampleUnitTest.java
hello-libs/distribution/gmath/include/: gmath.h
hello-libs/distribution/gperf/include/: gperf.h
hello-libs/gen-libs/: build.gradle
hello-libs/gen-libs/src/main/: AndroidManifest.xml
hello-libs/gen-libs/src/main/cpp/: CMakeLists.txt
hello-libs/gen-libs/src/main/cpp/gmath/: CMakeLists.txt
hello-libs/gen-libs/src/main/cpp/gmath/src/: gmath.c  gmath.h
hello-libs/gen-libs/src/main/cpp/gperf/: CMakeLists.txt
hello-libs/gen-libs/src/main/cpp/gperf/src/: gperf.c  gperf.h
hello-libs/gen-libs/src/test/java/com/example/gen_libs/: ExampleUnitTest.java
hello-libs/gradle/wrapper/: gradle-wrapper.properties
teapots/app/: build.gradle
teapots/app/src/androidTest/java/com/example/czd/teapots/: ExampleInstrumentedTest.java
teapots/app/src/main/: AndroidManifest.xml
teapots/app/src/main/cpp/: CMakeLists.txt  TeapotRenderer.cpp  TeapotRenderer.h  native-lib.cpp
teapots/app/src/main/java/com/example/czd/helper/: NDKHelper.java
teapots/app/src/main/java/com/example/czd/teapots/: MainActivity.java  TeapotApplication.java
teapots/app/src/main/res/layout/: activity_main.xml
teapots/app/src/main/res/values/: strings.xml
teapots/app/src/test/java/com/example/czd/teapots/: ExampleUnitTest.java
teapots/gradle/wrapper/: gradle-wrapper.properties
